# C-project

./: CMakeLists.txt  ResultWindow.cpp  ResultWindow.h  StartWindow.cpp  StartWindow.h  doll.cpp  doll.h  gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h  picture.ui  resources.qrc  代码讲解.md  奇偶对决项目实验报告.docx
